@@ -76,6 +76,8 @@
 #include "values_ui/seven_segment_display/seven_segment_display.h"
 #include "values_ui/toggle_button/toggle_button.h"
 
+#include "values_ui/panel/panel.h"
+
 using namespace spaghetti;
 
 extern "C" SPAGHETTI_API void register_plugin(spaghetti::Registry &a_registry)
@@ -136,4 +138,6 @@ extern "C" SPAGHETTI_API void register_plugin(spaghetti::Registry &a_registry)
   a_registry.registerElement<elements::Degree2Radian>("Rad2Deg", ":/unknown.png");
   a_registry.registerElement<elements::Radian2Degree>("Deg2Rad", ":/unknown.png");
   a_registry.registerElement<elements::ExtractString>("Extract String", ":/unknown.png");
+
+  a_registry.registerElement<elements::Panel>("Panel", ":/unknown.png");
 }
